<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    tools:context="MainActivity"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="5dp"
            android:layout_weight=".6"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textAlignment="center"
            android:text="@string/select_language"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_margin="5dp"
            android:layout_weight=".4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/imagescan"
            android:layout_weight=".5"
            android:onClick="imagescan"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/pdfscan"
            android:onClick="pdfscan"
            android:layout_weight=".5"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <ScrollView

        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textAlignment="center"
            android:text="@string/selected_file"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_width="match_parent"
            android:id="@+id/image"
            android:contentDescription="@string/pdfscan"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textAlignment="center"
            android:text="@string/extracted_text"
            android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/capturedString"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:id="@+id/searchtext"
            android:hint="@string/searchtextbox"
            android:layout_weight=".85"
            android:layout_height="match_parent"
           />
        <ImageButton
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary"
            android:onClick="search"
            android:src="@drawable/search"
            android:contentDescription="@string/searchtextbox"
            android:layout_weight=".15"
            android:layout_height="match_parent"/>

    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
